k8sexamples/letsencrypt/45ingress-routes_upd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-routes
  annotations:
    #apply, replace staging to prod and apply again
    # cert-manager.io/cluster-issuer: "letsencrypt-staging"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        #change to your domain
        - rest.nameofdomain
      secretName: tls-secret-rest.nameofdomain
    - hosts:
        #change to your domain
        - api.nameofdomain
      secretName: tls-secret-api.nameofdomain
    # - hosts:
    #     #change to your domain
    #     - tunnel.nameofdomain
    #   secretName: tls-secret-tunnel.nameofdomain
  rules:
    #change yourdomain.com to your domain
    - host: rest.nameofdomain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webserver-svc
                port:
                  number: 80
    #change yourdomain.com to your domain
    - host: api.nameofdomain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webserver-svc
                port:
                  number: 80
    # #change yourdomain.com to your domain
    # - host: tunnel.nameofdomain
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: kuard-service
    #             port:
    #               number: 80
